# slick

./: .gitignore  CHANGELOG.md  README.md  TODO.md  pyproject.toml
slick/: __init__.py  cli.py  config.py  decorators.py  models.py
slick/providers/: __init__.py  anthropic.py  base.py  fireworks.py  google.py  groq.py  mistral.py  openai.py  together.py
tests/: test_cli_models.py  test_config_resolution.py  test_decorators_integration.py  test_import.py  test_models.py
